Initial completion of Gateway development